# boring3

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .editorconfig  .travis.yaml  LICENSE  Makefile  README.rst  optional-requirements.in  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tox.ini
{{cookiecutter.repo_name}}/{{cookiecutter.package}}/: __init__.py
