[build-system]
{%- if cookiecutter.setuptools_scm == "yes" %}
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]
{%- else %}
requires = ["setuptools", "wheel"]
{%- endif %}

[tool.black]
line-length = {{ cookiecutter.line_length }}
target-version = ["py36"]
exclude = '\.eggs|\.git|\.hg|\.mypy|_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|migrations'
