[flake8]
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox
max-line-length = {{ cookiecutter.pep8_line_length }}

[wheel]
universal = {{ (cookiecutter.cross_platform == "yes")|int }}

{% if cookiecutter.test_runner == "py.test" -%}
[pytest]
addopts = --color=auto --cov={{ cookiecutter.package }} --cov-report=term-missing
norecursedirs = build dist docs *.egg-info .eggs cache .tox

{% endif -%}
{%- if cookiecutter.with_pbr == "yes" -%}

[metadata]
name = {{ cookiecutter.package }}
version = {{ cookiecutter.version }}
description-file = README.rst
summary = {{ cookiecutter.summary }}
maintainer = {{ cookiecutter.full_name }}
mainteiner-email = {{ cookiecutter.email }}
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
license = {{ cookiecutter.license }}
home-page = {{ cookiecutter.repo_url }}
requires-python = >={{ cookiecutter.min_python }}
home-page = {{ cookiecutter.repo_url }}
project-url = {{ cookiecutter.repo_url }}
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: {{ cookiecutter.min_python }}

[files]
packages =
    {{ cookiecutter.package }}

[extras]

[entry_points]

[global]
setup-hooks =
    pbr.hooks.setup_hook
{% endif -%}
