[flake8]
show-source = True
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox,migrations
inline-quotes = "
application-import-names = {{ cookiecutter.package }}
import-order-style = smarkets
ignore = I202
select = B902,B903

[tool:pytest]
addopts = -vvv -l
testpaths = tests

[wheel]
universal = 0

[metadata]
name = {{ cookiecutter.package }}
version = attr: {{ cookiecutter.package }}.__version__
long_description = file: README.rst
description = {{ cookiecutter.summary }}
maintainer = {{ cookiecutter.full_name }}
mainteiner-email = {{ cookiecutter.email }}
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
license_file = LICENSE
home-page = {{ cookiecutter.repo_url }}
project-url = {{ cookiecutter.repo_url }}
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
