[metadata]
name = {{ cookiecutter.package }}
{%- if cookiecutter.setuptools_scm == "no" %}
version = attr: {{ cookiecutter.package }}.__version__
{%- endif %}
long_description = file: README.rst
description = {{ cookiecutter.summary }}
maintainer = {{ cookiecutter.full_name }}
maintainer_email = {{ cookiecutter.email }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
license = MIT
license_file = LICENSE
url = {{ cookiecutter.repo_url }}
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
{%- if cookiecutter.setuptools_scm == "yes" %}
setup_requires =
  setuptools_scm
{%- endif %}

[flake8]
show-source = True
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox,migrations
inline-quotes = "
application-import-names = {{ cookiecutter.package }}
import-order-style = smarkets
ignore = I202
select = B902,B903

[tool:pytest]
addopts = -vvv -l
testpaths = tests

[bdist_wheel]
universal = 0
